<resources>
    <string name="app_name">HealthSync</string>
    <string name="default_web_client_id">794718366484-grv1vb611mao77s1vgr9ea9ej3und6hn.apps.googleusercontent.com</string>
    <string name="exercise_image_description">Exercise Image</string>
    <string-array name="meal_types">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
        <item>Dessert</item>
        <item>Other</item>
    </string-array>

    <string-array name="goal_types">
        <item>Eat Calories</item>
        <item>Burn Calories</item>
        <item>Steps</item>
        <item>Water Intake</item>
    </string-array>

    <string name="hello_message">Select a language below:</string>
    <string name="english">English</string>
    <string name="afrikaans">Afrikaans</string>
    <string name="zulu">Zulu</string>

    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="dark">Dark Mode</string>
    <string name="about">About</string>
    <string name="contact">Contact Us</string>
    <string name="support">Support Centre</string>
    <string name="achievements">Achievements</string>
    <string name="language">Language</string>
    <string name="log_out">Log out</string>
    <string name="notifications">Notifications</string>

    <string name="menu">Menu:</string>
    <string name="exercise_tracking">Exercise Tracking</string>
    <string name="food_diary">Food Diary</string>
    <string name="meal_planning">Meal Planning</string>
    <string name="reports">Reports &amp; Analytics</string>
    <string name="goals">Goals</string>
    <string name="programs">Fitness Programs</string>


    <string name="add_goal">Add goal</string>
    <string name="today">Today:</string>
    <string name="calories_eaten">Calories eaten:</string>
    <string name="calories_burned">Calories burned:</string>
    <string name="steps">Steps:</string>
    <string name="goal">GOAL:</string>
    <string name="actual">ACTUAL:</string>

    <string name="tip">Tip!</string>
    <string name="tip_a">-Warm up for 5-10 minutes before the exercises to prevent any injuries by focusing on certain muscles.</string>
    <string name="tip_b">-Wear comfortable clothing and footwear and stay hydrated by drinking water through the workout.</string>
    <string name="tip_c">-After exercising, perform cool down workouts like stretching.</string>
    <string name="begin">Begin</string>

</resources>