<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#5AE7E9">

    <!-- Back Button -->
    <ImageView
        android:id="@+id/back_button"
        android:layout_width="59dp"
        android:layout_height="31dp"
        android:src="@drawable/back_btn"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp" />

    <!-- Menu Title -->
    <TextView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:text="@string/menu"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" />

    <!-- Exercise Tracking -->
    <TextView
        android:id="@+id/tv_exercise_tracking"
        android:layout_width="415dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#8FD5F6"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/exercise_tracking"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <!-- Food Diary -->
    <TextView
        android:id="@+id/tv_food_diary"
        android:layout_width="415dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#04A4EE"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/food_diary"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <!-- Meal Planning -->
    <TextView
        android:id="@+id/tv_meal_planning"
        android:layout_width="417dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#0A6CFF"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/meal_planning"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <!-- Reports & Analytics -->
    <TextView
        android:id="@+id/tv_reports_analytics"
        android:layout_width="415dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#055FE5"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/reports"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <!-- Goals -->
    <TextView
        android:id="@+id/tv_goals"
        android:layout_width="418dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#0450C3"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/goals"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <!-- Fitness Programs -->
    <TextView
        android:id="@+id/tv_fitness_programs"
        android:layout_width="415dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#0543A0"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/programs"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="22sp" />

    <!-- Settings -->
    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="415dp"
        android:layout_height="87dp"
        android:background="#00245B"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_gravity="bottom" />

</LinearLayout>
