<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fitness_Tip">

    <TextView
        android:id="@+id/textView"
        android:layout_width="109dp"
        android:layout_height="56dp"
        android:layout_marginTop="108dp"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/tip"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="59dp"
        android:layout_height="31dp"
        android:src="@drawable/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="331dp"
        android:layout_height="94dp"
        android:background="#56C5D6"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/tip_a"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.357" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="331dp"
        android:layout_height="94dp"
        android:background="#56C5D6"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/tip_b"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="332dp"
        android:layout_height="62dp"
        android:layout_marginTop="248dp"
        android:layout_marginBottom="53dp"
        android:background="#56C5D6"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/tip_c"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/begin_btn"
        android:layout_width="119dp"
        android:layout_height="51dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="#56C5D6"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/begin"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="131dp"
        android:layout_height="90dp"
        android:layout_marginBottom="19dp"
        app:layout_constraintBottom_toTopOf="@+id/begin_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/lifting_weights" />
</androidx.constraintlayout.widget.ConstraintLayout>